# resultit

./: Cargo.toml  LICENSE  README.md
src/: flatten_results.rs  lib.rs  stop_after_error.rs
