[package]
name = "resultit"
version = "0.1.0"
authors = ["Benjamin Kay <benjamin@benkay.net>"]
edition = "2018"
description = "Iterator adapters for iterators over results."
keywords = ["iterators"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/benkay86/resultit"

[badges]
maintenance = { status = "passively-maintained" }
